--- a/example/helloworld/index.html
+++ b/example/helloworld/index.html
@@ -5,6 +5,9 @@
     <title>HelloWorld</title>
 </head>
 <body>
+<script
+src="https://unpkg.com/@vue/reactivity@3.0.5/dist/reactivity.global
+.js"></script>
 <div id="app"></div>
 <script src="./main.js" type="module"></script>
 </body>
